Fix app compile for trino357